[gd_scene load_steps=8 format=3 uid="uid://c2lrr3e7whvxr"]

[ext_resource type="FontFile" uid="uid://canpo2eqq0nj7" path="res://Assets/Fonts/Kenney Pixel.ttf" id="1_mb8p0"]
[ext_resource type="Script" path="res://Scenes/UIScenes/device_label.gd" id="2_1rblg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0fmi"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.227451, 0.227451, 0.313726, 0.662745)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_dq2iy"]
radius = 16.0

[sub_resource type="Animation" id="Animation_xfesu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeviceName:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_5f4f8"]
resource_name = "show_label"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeviceName:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j78lp"]
_data = {
"RESET": SubResource("Animation_xfesu"),
"show_label": SubResource("Animation_5f4f8")
}

[node name="DeviceLabel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_1rblg")

[node name="DeviceName" type="Label" parent="."]
custom_minimum_size = Vector2(64, 16)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.8
anchor_top = -1.2
anchor_right = 0.8
anchor_bottom = -0.8
grow_horizontal = 2
pivot_offset = Vector2(56, 16)
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0.227451, 0.227451, 0.313726, 1)
theme_override_fonts/font = ExtResource("1_mb8p0")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_i0fmi")
text = "Device name"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LabelDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LabelDetect"]
shape = SubResource("CircleShape2D_dq2iy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j78lp")
}

[connection signal="body_entered" from="LabelDetect" to="." method="_on_label_detect_body_entered"]
[connection signal="body_exited" from="LabelDetect" to="." method="_on_label_detect_body_exited"]
